  interface is a bit indirect, but I'd like to preserve
  Imager::Fountain as a blessed array ref for now.
- the segments parameter supplied to the fountain filter and the
  fountain fill contructor now accepts color names or other 
  descriptions as other functions do.
- fix a few compiler warnings
- document the Imager::Font::BBox advance_width() method
- Imager::Font::BBox advance_width() method was falling back to
  the wrong value when the font driver's low level function
  didn't return the advance width.
- the FT 1.x was comparing versus an uninitialized variable when
  checking the end of string when calculating the right side bearing
  used to adjust pos_width for glyphs that overlap the right side of the
  advance width.
- Imager::Font::BBox objects now have right_bearing() and display_width()
  methods.  Hopefully this and the advance_width() method fills out
  the Imager bounding box interface to a useful state.
  Implemented for all four font drivers.
- Win32 font bounding_box() method now supports the advance width
  and right bearing values.
- Imager::Matrix2d->rotate() would only rotate around the supplied 
  centre point if both 'x' and 'y' were non-zero.
- the internal i_tags_get_string() function now acts correctly for
  integer only tags.
- the FT1.x driver now supports the align parameter correctly.
  Tests were added to each driver to check correct handling of the align
  parameter.
- the Win32 font driver bounding_box() method now puts accuarate values
  in the ascent and descent values, previous that were set to the 
  font ascent/descent rather than the values specific to the string.
- supplying align=>0 to the win32 font driver string() function 
  now aligns in the same way as the other drivers.

=================================================================

        For latest versions check the Imager-devel pages:
        http://imager.perl.org/

=================================================================
